# ZGS-collabothon

./: .gitignore  README.md  app.py  listen.py  requirements.txt  speak.py  transcibe.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: paymentScanClient.ts  voiceClient.ts
frontend/src/components/: BalanceScreen.tsx  ContactsScreen.tsx  DocumentScanScreen.tsx  MainMenuScreen.tsx  MiniStatementScreen.tsx  PinScreen.tsx  ReceiptScreen.tsx  StandingOrderScreen.tsx  TransferScreen.tsx  WelcomeScreen.tsx  WithdrawalScreen.tsx
frontend/src/context/: VoiceAssistantContext.tsx
tts/: __init__.py  tts.py
zgs_backend/: __init__.py  pyproject.toml
zgs_backend/src/zgs_backend/: converter_tool.py  image_to_text.py  payment_agent.py  scheduled_payment_tool.py
